TESTS = \
  addon_spec.rb \
  addon_selection_dialog_test.rb \
  discover_registration_services_test.rb \
  eula_downloader_spec.rb \
  helpers_spec.rb \
  import_certificate_dialog_test.rb \
  inst_scc_test.rb \
  registration_spec.rb \
  scc_test.rb \
  sw_mgmt_spec.rb

TEST_FIXTURES = fixtures/test.pem

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec --format doc
VERBOSE = 1
EXTRA_DIST = $(TESTS) $(TEST_FIXTURES) spec_helper.rb
